--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -471,11 +471,8 @@ image{
 
 .user-project-page-container{
 	height: 100%;
-    min-width: 100%;
+    max-width: 100%;
     margin: 0;
-    display: flex;
-    align-items: center;
-	justify-content: center;
 	padding: 50px;
 }
 
